# wolcen-mod-editor

./: .gitignore  README.md
dist_release/: notes.md
docs/: game-mapping.md  tool-design.md
editor/: package-lock.json  package.json  pnpm-lock.yaml
editor/src/: App.css  App.tsx  SetupScreen.tsx  api.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: lib.rs
editor/src-tauri/src/wolcen/: decode.rs  export.rs  import.rs  localization.rs  mod.rs  passives.rs  paths.rs  player.rs  setup.rs  skills.rs
editor/src/tabs/: GateTab.tsx  PlayerTab.tsx  SkillsTab.tsx
